--- a/package.json
+++ b/package.json
@@ -9,42 +9,43 @@
     "start": "nodemon server/server.js"
   },
   "dependencies": {
-    "apexcharts": "^3.8.4",
+    "apexcharts": "^3.8.6",
     "axios": "^0.18.1",
     "cors": "^2.8.5",
     "date-fns": "^1.30.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "filepond": "^4.4.12",
+    "filepond": "^4.7.1",
     "filepond-plugin-file-validate-size": "^2.2.0",
     "filepond-plugin-file-validate-type": "^1.2.4",
-    "filepond-plugin-image-preview": "^4.2.1",
+    "filepond-plugin-image-preview": "^4.4.0",
     "multer": "^1.4.2",
     "qbittorrent-api": "^1.0.0",
     "register-service-worker": "^1.6.2",
+    "transmission-promise": "^1.1.4",
     "vue": "^2.6.10",
-    "vue-apexcharts": "^1.4.0",
+    "vue-apexcharts": "^1.5.0",
     "vue-filepond": "^5.1.3",
-    "vue-router": "^3.1.2",
-    "vuetify": "^1.5.16",
+    "vue-router": "^3.1.3",
+    "vuetify": "^1.5.18",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-plugin-pwa": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
-    "eslint": "^6.1.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-pwa": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-vue": "^5.2.3",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   },
   "eslintConfig": {
     "root": true,
